logs/gherkin-tools.log
Listing '.'...
Listing './bin'...
Compiling './bin/gherkin_create_feature_file.py'...
Compiling './bin/gherkin_create_test_cases.py'...
***   File "./bin/gherkin_create_test_cases.py", line 77
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gherkin_sync_user_story.py'...
***   File "./bin/gherkin_sync_user_story.py", line 140
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gherkin_tools_setup.py'...
Compiling './bin/gherkin_update_test_executions.py'...
***   File "./bin/gherkin_update_test_executions.py", line 107
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gus_acceptance_criteria.py'...
***   File "./bin/gus_acceptance_criteria.py", line 67
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gus_compile_test_plan.py'...
***   File "./bin/gus_compile_test_plan.py", line 82
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gus_get_cycle_time.py'...
Compiling './bin/gus_info.py'...
***   File "./bin/gus_info.py", line 33
    except Exception, e:
                    ^
SyntaxError: invalid syntax

Compiling './bin/gus_investigation_history.py'...
Compiling './bin/gus_releases.py'...
***   File "./bin/gus_releases.py", line 61
    print "Assigning {} {} bugs to release {}".format(len(bugs), p, args.release)
                                             ^
SyntaxError: invalid syntax

Compiling './bin/gus_sprints.py'...
***   File "./bin/gus_sprints.py", line 86
    print "Need to specify a team id from GUS"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './bin/gus_teams.py'...
Compiling './bin/gus_test_cases.py'...
Compiling './bin/gus_themes.py'...
Compiling './bin/mock_test_execution.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/OpenSSL'...
Listing './lib/python3.5/site-packages/agile'...
Compiling './lib/python3.5/site-packages/agile/StoryParser.py'...
***   File "./lib/python3.5/site-packages/agile/StoryParser.py", line 11
    self.STORY_PATTERN=ur'As (.+?)[\s\r\n]*?(I can|I want|I require|I am able|I would like|I\\\'d like|I am|I expect|I must|I should|I need) (.+?)'
                                                                                                                                                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/agile/test'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/gherkin'...
Listing './lib/python3.5/site-packages/gherkin/test'...
Listing './lib/python3.5/site-packages/gherkin_tools-0.1.18.egg-info'...
Listing './lib/python3.5/site-packages/gus'...
Listing './lib/python3.5/site-packages/gus/stats'...
Listing './lib/python3.5/site-packages/gus/test'...
Listing './lib/python3.5/site-packages/gus_client-0.5.27.egg-info'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/ndg'...
Listing './lib/python3.5/site-packages/ndg/httpsclient'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/pki'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/pki/ca'...
Listing './lib/python3.5/site-packages/ndg/httpsclient/test/scripts'...
Listing './lib/python3.5/site-packages/ndg_httpsclient-0.4.3.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyOpenSSL-17.5.0.dist-info'...
Listing './lib/python3.5/site-packages/pyasn1'...
Listing './lib/python3.5/site-packages/pyasn1/codec'...
Listing './lib/python3.5/site-packages/pyasn1/codec/ber'...
Listing './lib/python3.5/site-packages/pyasn1/codec/cer'...
Listing './lib/python3.5/site-packages/pyasn1/codec/der'...
Listing './lib/python3.5/site-packages/pyasn1/codec/native'...
Listing './lib/python3.5/site-packages/pyasn1/compat'...
Listing './lib/python3.5/site-packages/pyasn1/type'...
Listing './lib/python3.5/site-packages/pyasn1-0.4.2.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/sc_pylibs-0.1.4.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/sf'...
Listing './lib/python3.5/site-packages/sf/test'...
Listing './lib/python3.5/site-packages/sf_client-0.1.10.egg-info'...
Listing './lib/python3.5/site-packages/simple_salesforce'...
Listing './lib/python3.5/site-packages/simple_salesforce-0.73.0.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/ui'...
Listing './lib/python3.5/site-packages/ui/test'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/userdata'...
Listing './share'...
Listing './share/python-wheels'...
